refactor: 공통 예외/보안 코드 주석 보강 및 정적분석 경고 정리